force-app/main/default/objects/CabinSetting__c/CabinSetting__c.object-meta.xml
<CustomObject>
    <label>Cabin Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cabin Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>