force-app/main/default/objects/CabinSetting__c/fields/CabinClass__c.field-meta.xml
<CustomField>
    <fullName>CabinClass__c</fullName>
    <description>API Name為WBS的代碼</description>
    <inlineHelpText>API Name為WBS的代碼</inlineHelpText>
    <label>座位艙等</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>頭等艙</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>商務艙</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>豪經艙</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>經濟艙</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>