force-app/main/default/objects/CabinSetting__c/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <label>Column</label>
    <length>20</length>
    <type>Text</type>
</CustomField>