force-app/main/default/objects/CabinSetting__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>機型編號</label>
    <length>20</length>
    <type>Text</type>
</CustomField>