force-app/main/default/objects/CabinSetting__c/fields/SeatNumber__c.field-meta.xml
<CustomField>
    <fullName>SeatNumber__c</fullName>
    <label>座位</label>
    <length>20</length>
    <type>Text</type>
</CustomField>