force-app/main/default/objects/CabinSetting__c/fields/SeatStatus__c.field-meta.xml
<CustomField>
    <fullName>SeatStatus__c</fullName>
    <label>選位狀態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>不可選位</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>條件選位</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>付費選位</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>