force-app/main/default/objects/CabinSetting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>座位屬性</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>加長座位</fullName>
            </value>
            <value>
                <fullName>緊急座位</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>