force-app/main/default/objects/CabinSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>SeatNumber__c</columns>
    <columns>Type__c</columns>
    <columns>SeatStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>